--- a/angular.json
+++ b/angular.json
@@ -132,5 +132,10 @@
       }
     }
   },
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  },
   "defaultProject": "cafedeengelbewaarder"
 }
